--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,9 @@
         "helmet": "^4.6.0",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
-        "nodemon": "^2.0.12",
         "mysql2": "^1.5.3",
+        "nodemailer": "^6.7.2",
+        "nodemon": "^2.0.12",
         "sequelize": "^6.14.1",
         "slugify": "^1.6.0",
         "xss-clean": "^0.1.1"
