--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
     "dependencies": {
         "compression": "^1.7.4",
         "cors": "^2.8.5",
+        "csv-parser": "^3.0.0",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-rate-limit": "^5.3.0",
         "helmet": "^4.6.0",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
+        "multer": "^1.4.4",
         "mysql2": "^1.5.3",
         "nodemailer": "^6.7.2",
         "nodemon": "^2.0.12",
